# musicdl

./: .env_example  .gitignore  LICENSE.txt  Makefile  README.md  cookies.txt  dlmusic.py  example.py  music_dl.py  pyproject.toml  requirements.txt
data/: music.db
musicdl/: __init__.py  __main__.py  app.py  cli.py  config.py  containers.py  dataloader.py  db.py  mdl.py  sp.py  yt.py
src/: __init__.py  add_music.py  create_tables.sql  db.py  env.py  tests.py
src/musicdl/: __main__.py  app.py  cli.py  config.py
tests/: __main__.py  test_if_works.py
