[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["musicdl"]

[project]
name = "musicdl"
version = "2025.7"
description = "download tracks, albums, playlists, and artist discographies"
readme = "README.md"

dependencies = [ 
    "pandas>=2.3.1",
    "yt-dlp>=2025.9.5",
    "ffmpeg-binaries==1.0.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "dotenv>=0.9.9",
    "spotipy>=2.25.1",
    "urllib3>=2.5.0",
    "tqdm==4.67.1",
    "platformdirs"
]

authors = [
    {name = "Dennis Farmer", email = "dennisfj@umich.edu"},
    {name = "Evan Teal", email = "evanteal@umich.edu"}
]

[project.scripts]
musicdl = "musicdl.mdl:main"